    {^} !autoinvite warns you if no IRCNick is specified for the site.
    {^} !maxupperrip can show actual value now.
    {^} !findaffil has improved irc output.
    {^} backup on startup will only be executed after sites.dat has been successfully decrypted. (#169)
    {^} !leechers code improved.
    {-} TheTVDB support as API goes offline on October 1st, 2017 (#175)

--=============================( SLFTP v1.5.5 )===================================-
  ** NOTE: FROM NOW ON YOU HAVE TO USE THE MAKEFILE ON LINUX AND THE MAKE.BAT ON WINDOWS **

    {+} FastMM4 memory manager (https://github.com/pleriche/FastMM4)
    {+} Partial use of Faster Regex Engine FLRE (https://github.com/BeRo1985/flre) (much faster!!!)
    {+} New dirlist Code including:
        - Changed filesize variables to use Int64 instead of Integer
        - flag to enable/disable racing incomplete files (at least with glftpd for now) (see !skipinc) (#16)
        - Reworked the file sorting with more options
        - Reworked/optimized dirlist sorting
        - Added handling for special dirs completeness (i.e. dirfix)
    {+} !skipinc to enable/disable racing incomplete files (#16)
    {+} tvlanguage rule for TVMaze infos (#79)
    {+} !sites output is in alphabetically order (#152)
    {+} !siteuser to change a site username
    {+} !sitepass to change a site password
    {+} sites in [STATS] line are ordered by completion time (uses both, ftp and irc, if catchline added)
    {+} !routeset/!routelock supports several new ways to set routes -> !help routeset (#82)
    {+} Add all available Genres from TVMaze und TheTVDB
    {+} Affilsgroups with _INT will be handled as normal Affilgroup, no need to add both (e.g. ZzZz & ZzZz_INT) (#129)
    {+} New IRC Help Command -> !help nhelp
    {+} Enable/disable NFO Download for fetching infos + automatically disable problematic sites -> !help usefornfodownload (#125)
    {+} Add new sections over IRC -> !help sectionins